# interceptkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: release.yml
docs/: public-launch-checklist.md  setup-and-release.md
extension/: README.md  package-lock.json  package.json  tsconfig.json
extension/public/: devtools.html  manifest.chrome.json  manifest.firefox.json  options.html  panel.html  popup.html
extension/scripts/: build.mjs
extension/src/: background.ts  devtools.ts  options.ts  panel.ts  popup.ts
extension/src/lib/: constants.ts  runtime.ts  types.ts  webext.ts
proxy/: Cargo.toml  README.md
proxy/src/: control.rs  main.rs  models.rs  proxy.rs  rewrite.rs  rules.rs  state.rs
shared/: README.md  rule-schema.json
